# template-framework

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_simple.bat  build_simple.ps1  build_simple.sh  clean.ps1  clean.sh
cli/: CMakeLists.txt  README.md  TFW_cli.c  TFW_cli_config.c
cli/include/: TFW_cli_common.h  TFW_cli_config.h
core/: CMakeLists.txt  README.md  TFW_c_interface.cpp  TFW_core.cpp  TFW_core.h  TFW_core_interface.c  TFW_core_interface.cpp  TFW_core_log.h  TFW_interface.cpp
core/core_frame/: TFW_core.cpp
core/include/: TFW_config_manager.h  TFW_core.h  TFW_core_impl.h  TFW_core_interface.h  TFW_msg_loop_mgr.h
core/src/: TFW_config_manager.cpp  TFW_core.cpp  TFW_core_impl.cpp  TFW_msg_loop_mgr.cpp
docs/: Git配置说明.md  IDE配置指南.md  TFW_架构设计文档.md  TFW_项目开发指南.md  编码检测报告.md  编码规范.md
interface/: TFW_c_interface.h  TFW_core.h  TFW_errorno.h  TFW_interface.h  TFW_single_instance.h  TFW_types.h
simple/: CMakeLists.txt  README.md
simple/c/: CMakeLists.txt  README.md  main.c
simple/cpp/: CMakeLists.txt  README.md  main.cpp
utils/: CMakeLists.txt  README.md  TFW_utils_log.h
utils/atomic/: TFW_atomic.c
utils/atomic/include/: TFW_atomic_inner.h
utils/atomic/macos/: TFW_atomic_inner.c
utils/atomic/posix/: TFW_atomic_inner.c
utils/atomic/win32/: TFW_atomic_inner.c
utils/config/: TFW_config.c
utils/file/posix/: TFW_file_impl.c
utils/file/win32/: TFW_file_impl.c
utils/include/: TFW_atomic.h  TFW_build_info.h.in  TFW_common_defines.h  TFW_config.h  TFW_core_log.h  TFW_file.h  TFW_json.h  TFW_list.h  TFW_log.h  TFW_mem.h  TFW_message_loop.h  TFW_sdk_log.h  TFW_thread.h  TFW_timer.h  TFW_utils_log.h
utils/json/: TFW_json.c
utils/json/include/: TFW_json.h
utils/json/src/: TFW_json.c
utils/log/: TFW_log.c  TFW_log_file.c  TFW_log_internal.h
utils/log/include/: TFW_log_internal.h
utils/log/src/: TFW_log.c
utils/mem/posix/: TFW_mem_impl.c
utils/mem/win32/: TFW_mem_impl.c
utils/message_loop/: TFW_message_loop.c
utils/thread/: TFW_thread.c
utils/thread/posix/: TFW_thread_impl.c
utils/thread/src/: TFW_thread.c
utils/thread/win32/: TFW_thread_impl.c
utils/timer/macos/: TFW_timer_impl.c
utils/timer/posix/: TFW_timer_impl.c
utils/timer/win32/: TFW_timer_impl.c
